<?xml version="1.0"?>
<package>
  <name>aruco_navigation</name>
  <version>1.0.0</version>
  <description>Position from aruco_navigation</description>
  <maintainer email="guozhenglong.cn@gmail.com">Guo Zhenglong</maintainer>
  <license>BSD</license>
  <author email="guozhenglong.cn@gmail.com">Guo Zhenglong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>aruco_eye_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>cmake_modules</run_depend> 
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>aruco_eye_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
